--- a/src/dada-app/elements/dada-newsletter.html
+++ b/src/dada-app/elements/dada-newsletter.html
@@ -5,6 +5,7 @@
   <template>
     <style>
        :host {
+         margin-top: 3em;
         position: relative;
         width: 100%;
         height: 100%;
@@ -13,7 +14,8 @@
       }
 
       .container{
-        margin-bottom: 20em;
+        padding-bottom: 4em;
+        padding-top: 3em;
       }
 
       h1 {
