--- a/paiment.html
+++ b/paiment.html
@@ -14,6 +14,6 @@
 
   </head>
   <body style="margin:0; width:100%">
-    plop
+    <img src="src/img/PAIEMENT-DADA.jpg" style="width: 100%;height: auto;max-width: 100%;">
   </body>
 </html>
