--- a/src/dada-buy/elements/dada-exposition.html
+++ b/src/dada-buy/elements/dada-exposition.html
@@ -158,6 +158,7 @@
                 height: 100%;
                 max-height: 100%;
                 max-width: 100%;
+                margin-bottom: 1.5em;
             }
 
             paper-button.custom {
@@ -179,6 +180,7 @@
                 width: 50%;
                 max-height: 100%;
                 max-width: 100%;
+                margin-bottom: 1.5em;
             }
 
             a { 
@@ -221,9 +223,9 @@
                                 </div>
                                 <div class="right-content">
                                     <img src="src/img/p1.png" class="umbrella-style"/>
-                                    
+                                    <br />
                                    <a href="paiment.html"><img src="src/img/btn1.png" class="button-price"/></a> 
-                                    
+                                    <br/>
                                     <img src="src/img/p2.png" class=""/>
                                 </div>
                             </div>
