--- a/src/dada-app/elements/dada-news.html
+++ b/src/dada-app/elements/dada-news.html
@@ -31,7 +31,7 @@
                 margin-top: 10px;
 
                 color: black;
-               /* font-weight: bold;*/
+                /* font-weight: bold;*/
                 text-align: center;
                 /*box-shadow: 1px 1.5px 2px grey;*/
             }
@@ -83,12 +83,21 @@
 
             h1:before {
                 position: absolute;
-                left: 18em;
+                left: 20.5em;
                 top: 1.5em;
                 height: 0;
                 width: 3.5em;
                 content: '';
+            }
+
+            .empty-container {
+                margin-bottom: 2em !important;
+                width: 10em;
                 border-top: 1px solid black;
+            }
+
+            .center {
+                margin: 0 auto;
             }
 
             .button-container {
@@ -143,13 +152,14 @@
                 color: transparent;
             }
 
-            a { 
+            a {
                 color: inherit;
                 text-decoration: none;
             }
         </style>
         <div>
             <h1>En ce moment...</h1>
+            <div class="empty-container center"></div>
         </div>
         <div class="flex-container">
             <div class="flex-item">
