--- a/src/dada-buy/elements/dada-exposition.html
+++ b/src/dada-buy/elements/dada-exposition.html
@@ -187,6 +187,31 @@
                 color: inherit;
                 text-decoration: none;
             }
+
+            h1 {
+                text-align: center;
+                position: relative;
+                line-height: 1.2em;
+            }
+
+            h1:before {
+                position: absolute;
+                left: 20.5em;
+                top: 1.5em;
+                height: 0;
+                width: 3.5em;
+                content: '';
+            }
+
+            .empty-container {
+                margin-bottom: 2em !important;
+                width: 10em;
+                border-top: 1px solid black;
+            }
+
+            .center {
+                margin: 0 auto;
+            }
         </style>
 
         <img src="src/img/MAGRITTE-background.jpg" class="img-responsive"></img>
@@ -204,17 +229,14 @@
 
                         <br/>
                         <br/>
-                        <div class="video-style">
-                            <span class="title">Visionnez la bande annonce de l'exposition</span>
-                        </div>
+                        <h1>Visionnez la bande annonce de l'exposition</h1>
+                        <div class="empty-container center"></div>
                         <video width="600" controls>
                             <source src="src/img/POC-DADA.mp4" type="video/mp4"> Your browser does not support HTML5 video.
                         </video>
 
-                        <div class="video-style">
-                            <span class="title">Prenez vos places !</span>
-                        </div>
-
+                        <h1>Prenez vos places !</h1>
+                        <div class="empty-container center"></div>
 
                         <div class="payment-container">
                             <div class="payment-style">
