--- a/src/dada-app/elements/dada-slide.html
+++ b/src/dada-app/elements/dada-slide.html
@@ -54,5 +54,6 @@
         }
 
         window.customElements.define(DadaSlide.is, DadaSlide);
+        console.log('test');
     </script>
 </dom-module>
