--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <link rel="import" href="/src/dada-app/dada-app.html">
+    <link rel="import" href="src/dada-app/dada-app.html">
   </head>
   <body style="margin:0; width:100%">
     <dada-app></dada-app>
