--- a/exposition.html
+++ b/exposition.html
@@ -7,11 +7,8 @@
     <title>DADA</title>
     <meta name="description" content="plop">
 
-    <!-- See https://goo.gl/OOhYW5 -->
-    <link rel="manifest" href="/manifest.json">
-
-    <link rel="import" href="/src/dada-buy/dada-buy.html">
-    <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="import" href="src/dada-buy/dada-buy.html">
+    <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
   </head>
   <body style="margin:0; width:100%">
